--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
   </head>
   <body>
     <div id="app"></div>
-    <script src="/dev/main.js"></script>
+
+    <script src="./node_modules/three/build/three.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/bluebird/latest/bluebird.min.js"></script>
+<!--
+    <script src="./libs/OrbitControls.js"></script>
+-->
+    <script src="./main.js"></script>
   </body>
 </html>
