--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <div id="app"></div>
 
     <script src="./node_modules/three/build/three.min.js"></script>
+    <script src="./node_modules/three/examples/js/controls/TransformControls.js"></script>
     <script src="./node_modules/dat.gui/build/dat.gui.min.js"></script>
     <script src="./main.js"></script>
   </body>
