--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="./node_modules/three/build/three.min.js"></script>
     <script src="./node_modules/three/examples/js/controls/TransformControls.js"></script>
     <script src="./node_modules/dat.gui/build/dat.gui.min.js"></script>
+    <script src="./libs/threex.keyboardstate.js"></script>
     <script src="./main.js"></script>
   </body>
 </html>
